k8s/traefik/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: traefik
      containers:
        - name: traefik-ingress-controller
          image: traefik:v2.3
          args:
            - --api.dashboard
            - --accesslog
            - --providers.kubernetesingress
            - --providers.file.directory=/config
            - --providers.file.watch=true
            - --entryPoints.web.address=:80
            - --entrypoints.web.http.redirections.entrypoint.to=websecure
            - --entrypoints.web.http.redirections.entrypoint.scheme=https
            - --entryPoints.websecure.address=:443
            - --entrypoints.websecure.http.middlewares=auth@file
            - --entrypoints.websecure.http.tls.certresolver=letsencrypt
            - --entrypoints.websecure.http.tls.domains[0].main=staging.mchill.duckdns.org
            - --entrypoints.websecure.http.tls.domains[0].sans=*.staging.mchill.duckdns.org
            - --certificatesresolvers.letsencrypt.acme.email=matthewchill7@gmail.com
            - --certificatesresolvers.letsencrypt.acme.dnschallenge.provider=duckdns
            - --certificatesresolvers.letsencrypt.acme.storage=/acme/acme.json
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
          volumeMounts:
            - name: server
              mountPath: /acme
              subPath: traefik
            - name: traefik
              mountPath: /config
              readOnly: true
        - name: traefik-forward-auth
          image: thomseddon/traefik-forward-auth:2
          ports:
            - containerPort: 4181
      volumes:
        - name: server
          persistentVolumeClaim:
            claimName: server
        - name: traefik
          configMap:
            name: traefik
