k8s/traefik/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      nodePort: 30080
    - name: https
      port: 443
      nodePort: 30443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
spec:
  type: ClusterIP
  ports:
    - port: 4181
