k8s/traefik/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("traefik.staging.mchill.duckdns.org")
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host("auth.staging.mchill.duckdns.org")
      kind: Rule
      services:
        - name: traefik-internal
          port: 4181
